Informatie whatsapp bericht met nieuwe template uitgebreid.